# agentic-dev

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
agentic-systems/talent-lens/backend/: pyproject.toml
agentic-systems/talent-lens/backend/alembic/: env.py
agentic-systems/talent-lens/backend/alembic/versions/: 55b6bd036239_make_interview_candidate_id_nullable.py  a34a080a76a0_initial_schema.py  b896be0cbc49_add_skills_matrix_models.py  c7a3f1d8e902_add_soft_skills_cultural_fit.py  d1e2f3a4b5c6_add_initial_interview_stage.py  e2f3a4b5c6d7_enable_rls_all_tables.py  eb65518f4fe1_add_technology_stacks.py  f3a4b5c6d7e8_phase2_salary_priority_survey.py  g4b5c6d7e8f9_phase3_orientation.py  h5c6d7e8f9g0_phase4_confidence_coverage_recording.py  i6d7e8f9g0h1_phase5_feedback_round.py
agentic-systems/talent-lens/backend/src/talentlens/: config.py  database.py  dependencies.py  main.py
agentic-systems/talent-lens/backend/src/talentlens/models/: __init__.py  base.py
agentic-systems/talent-lens/backend/src/talentlens/prompts/: assessment_system.py  contribution_detection.py  talk_ratio.py
agentic-systems/talent-lens/backend/src/talentlens/schemas/: assessment.py  candidate.py  capability.py  interview.py  rubric.py  shared_link.py  survey.py  venture.py
agentic-systems/talent-lens/backend/src/talentlens/services/: interview_guide.py  job_description.py
agentic-systems/talent-lens/backend/src/talentlens/tasks/: assessment.py
agentic-systems/talent-lens/backend/src/talentlens/tests/: conftest.py  test_health.py
commands/: review.md  (+1 more)
(+380 files in other folders)
